# routes/index.js
@@ -7,7 +7,7 @@ router.use('/destinations', require('./destinations.r'));
 router.use('/destinationPlans', require('./destinationPlans.r'));
 router.use('/clients', require('./clients.r'));
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
+/*router.get('/login', passport.authenticate('github'), (req, res) => {});
 
 router.get('/logout', function (req, res, next) {
   req.logOut(function (err) {
@@ -16,6 +16,6 @@ router.get('/logout', function (req, res, next) {
     }
     res.redirect('/');
   });
-});
+});*/
 
 module.exports = router;
